package org.bitbucket.eniqen.api;

import org.springframework.web.bind.annotation.RequestMapping;
import org.springframework.web.bind.annotation.RestController;

/**
 * Created by sbt-nemenko-ma on 10.02.2017.
 */
@RestController
@RequestMapping(value = "/documents")
public class DocumentController {
}
