package org.bitbucket.eniqen.repositories;

import org.bitbucket.eniqen.models.Document;

/**
 * @author Mikhail Nemenko {@literal <nemenkoma@gmail.com>}
 */
public interface DocumentRepository extends BaseRepository<Document, String> {
}
