package org.bitbucket.eniqen.repositories;


import org.bitbucket.eniqen.models.Template;

/**
 * @author Mikhail Nemenko {@literal <nemenkoma@gmail.com>}
 */
public interface TemplateRepository extends BaseRepository<Template, String> {
}
