package org.bitbucket.eniqen.services.document;

/**
 * @author Mikhail Nemenko {@literal <nemenkoma@gmail.com>}
 */
public interface DocumentService {
}
