package org.bitbucket.eniqen.services.template;

/**
 * @author Mikhail Nemenko {@literal <nemenkoma@gmail.com>}
 */
public interface TemplateService {
}
